# path-finding

./: .envrc  .gitignore  README.md  TODO.md  flake.nix  notebook.ipynb  pyproject.toml  tex-env.nix
configs/: dqn.json
path/: __init__.py  __main__.py  agent.py  cell.py  const.py  elements.py  environment.py  grid.py  ground_truth.py
scripts/: notebook.ipynb
tex/: .gitignore  acl2020.sty  report.bib  report.tex
tex/paper/: main.bib  main.tex
