[tool.poetry]
name = "path-finding"
version = "0.1.0"
description = ""
authors = ["ngngardner <ngngardner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.22.1"
jupyter = "^1.0.0"
ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
